--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -18,7 +18,8 @@
         <item
             android:id="@+id/nav_menu"
             android:icon="@drawable/back"
-            android:title="Menu" />
+            android:title="Menu"
+            android:onClick=""/>
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_cancel_black_24dp"
