--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -16,16 +16,13 @@
         android:layout_height="match_parent"
         android:backgroundTint="@color/colorPrimaryDark">
 
-            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:map="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/map"
-                android:name="com.google.android.gms.maps.SupportMapFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".FirstMenu" />
+        <fragment
+            android:id="@+id/fragment"
+            android:name="com.example.parkingapp.MapsFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-            <android.support.constraint.ConstraintLayout
+        <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom|center"/>
