--- a/app/src/main/res/layout/activity_parking_info.xml
+++ b/app/src/main/res/layout/activity_parking_info.xml
@@ -21,13 +21,12 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView54"
+                android:id="@+id/tvName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/montserrat_regular"
-                android:text="Parking la Rambla"
                 android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:textSize="45sp" />
 
