--- a/app/src/main/res/layout/activity_qr_generator.xml
+++ b/app/src/main/res/layout/activity_qr_generator.xml
@@ -69,7 +69,7 @@
         app:srcCompat="@drawable/qr_image" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spinnerPayment"
         android:layout_width="354dp"
         android:layout_height="64dp"
         android:layout_marginStart="8dp"
