--- a/app/src/main/res/layout/item_parking_list.xml
+++ b/app/src/main/res/layout/item_parking_list.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/tvParkingName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="248dp"
+        android:layout_height="61dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
@@ -27,8 +27,8 @@
 
     <ImageView
         android:id="@+id/ivParkingListPhoto"
-        android:layout_width="135dp"
-        android:layout_height="135dp"
+        android:layout_width="152dp"
+        android:layout_height="184dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,24 +36,12 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/rambla_escaleras" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="37dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.017"
-        app:layout_constraintStart_toEndOf="@+id/ivParkingListPhoto"
-        app:layout_constraintTop_toBottomOf="@+id/tvParkingName"
-        app:srcCompat="@android:drawable/btn_star_big_off" />
-
     <TextView
         android:id="@+id/tvAddressParkingList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="240dp"
+        android:layout_height="96dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/montserrat_regular"
@@ -63,6 +51,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.022"
         app:layout_constraintStart_toEndOf="@+id/ivParkingListPhoto"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.529" />
+        app:layout_constraintTop_toBottomOf="@+id/tvParkingName" />
 </android.support.constraint.ConstraintLayout>
