--- a/app/src/main/res/layout/activity_add_credit_card.xml
+++ b/app/src/main/res/layout/activity_add_credit_card.xml
@@ -39,10 +39,10 @@
         android:layout_width="182dp"
         android:layout_height="125dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="152dp"
+        android:layout_marginTop="40dp"
         android:layout_weight="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:srcCompat="@drawable/credit_card" />
 
 
@@ -66,12 +66,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/bebasneue_regular"
         android:text="Payment Method"
         android:textColor="@color/fontColor"
         android:textSize="45sp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="88dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
@@ -79,10 +80,12 @@
         android:layout_width="147dp"
         android:layout_height="69dp"
         android:layout_gravity="right"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etCVV"
         app:srcCompat="@drawable/save_button" />
 
     <TextView
